--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Recify">
-        <activity android:name=".MyRecipes"></activity>
+        <activity android:name=".NearbySpots"></activity>
+        <activity android:name=".MyRecipes" />
         <activity android:name=".UploadRecipe" />
         <activity android:name=".Dashboard" />
         <activity android:name=".Register" />
