--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,10 @@
 include ':app'
 rootProject.name = "Recify"
+include ':app'
+
+// Add these lines:
+include ':sceneform'
+project(':sceneform').projectDir=new File('sceneformsrc/sceneform')
+
+include ':sceneformux'
+project(':sceneformux').projectDir=new File('sceneformux/ux')
