--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.2.0-rc01"
     implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.0.0'
     implementation 'com.google.ar:core:1.23.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
