--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,17 @@
         <!-- "AR Optional" app, contains non-AR features that can be used when
      "Google Play Services for AR" (ARCore) is not available. -->
         <meta-data android:name="com.google.ar.core" android:value="optional" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyA01yE0CPOLP2Gqw12bXJdyoIaIkVm7WRg" />
+
     </application>
 
 
