--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
     implementation "androidx.fragment:fragment-ktx:1.2.0-rc01"
-
+    //recyclerview
+    implementation "androidx.recyclerview:recyclerview:1.0.0"
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.karumi:dexter:6.2.2'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
