--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Theme.Recify"/>
         <!-- "AR Optional" app, contains non-AR features that can be used when
      "Google Play Services for AR" (ARCore) is not available. -->
         <meta-data android:name="com.google.ar.core" android:value="optional" />
