--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,12 +55,12 @@ dependencies {
     implementation('org.tensorflow:tensorflow-lite:0.0.0-nightly') { changing = true }
     implementation('org.tensorflow:tensorflow-lite-gpu:0.0.0-nightly') { changing = true }
     implementation('org.tensorflow:tensorflow-lite-support:0.0.0-nightly') { changing = true }
-    androidTestImplementation 'androidx.test:rules:1.1.1'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
 
     //image cropping dependency
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
-
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
 
 
 }
